# vast

./: .env.example  .gitignore  COPYRIGHT  LICENSE  README.md  README_USAGE.md  VAST_README.md  VAST_VISION.md  VAST_VISION_REALIZED.md  apply_authoritative_db_policy.py  authoritative-db-policy-src.patch  authoritative-db-policy.patch  cli.py  cli_chat.py  convo_suite.yaml  demo_vast.py  electron  example_conversations.md  fence-aware-chunker-unified.patch  fence-aware-chunker.patch  interactive_demo.py  pytest.ini  requirements-mcp.txt  requirements.txt  setup.cfg  show_vast_capabilities.py  smoke.patch  start  start_vast.py  test_conversation.py  test_vast_dump.py  vast-inception-andexample.md  vast_in_action.py  vast_roadmap.md  vastconversation.md
api/: __init__.py
docs/: STATUS.md  freestyle_db.md  mvp_vision.md  progress.md
frontend/: README.md  chat_select_renderer.js  chat_write_checklist.js  index.html  read_renderer.js  script.js  styles.css
scripts/: convo_runner.py
tests/: conftest.py  test_catalog_pg.py  test_chat_select_renderer.py  test_chat_write_checklist.py  test_cli_diagnostics.py  test_cli_params_optional.py  test_config_write_url.py  test_conversation.py  test_conversation_db_size.py  test_conversation_facts.py  test_conversation_ops.py  test_demo_user_log.py  test_demo_writes.py  test_facts.py  test_frontend_renderer.py  test_guardrails.py  test_identifier_guard.py  test_identifier_guard_aliases.py  test_identifier_strict.py  test_latest_per_group.py  test_perms_bootstrap.py  test_planner_retry_limit_default.py  test_readonly_guard.py  (+2 more)
(+65 files in other folders)
