[metadata]
name = vast
version = 0.0.0
description = Vast data assistant services
license = file: LICENSE

[options]
python_requires = >=3.9
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    vast-mcp = vast_mcp.server:main
